<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.accountsoverview.AccountsOverviewFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_arrowLeft"
            android:layout_width="40dp"
            android:layout_height="56dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_arrowleft"
            app:layout_constraintBottom_toBottomOf="@id/viewPager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/viewPager"
            app:tint="@color/blue" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="0dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
            app:layout_constraintEnd_toStartOf="@id/iv_arrowRight"
            app:layout_constraintStart_toEndOf="@id/iv_arrowLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_arrowRight"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:rotation="180"
            android:src="@drawable/ic_arrowleft"
            app:layout_constraintBottom_toBottomOf="@id/viewPager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/viewPager"
            app:tint="@color/blue" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPager"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            app:tabRippleColor="@null" />

        <com.pazmandipeter.devoralime.wuptest.view.custom.AccountDetailLine
            android:id="@+id/adl_availableBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:descText="@string/available"
            app:enableDividerLine="false"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            tools:balance="300.00"
            tools:currency="USD" />

        <ProgressBar
            android:id="@+id/progressBar_balance"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:left="2dp"
            android:progress="40"
            android:progressDrawable="@drawable/custom_progressbar_blueorange"
            android:right="2dp"
            android:rotation="180"
            app:layout_constraintTop_toBottomOf="@id/adl_availableBalance" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_zeroBalanceAlert"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/white"
            android:src="@drawable/ic_alert"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/progressBar_balance"
            app:layout_constraintEnd_toEndOf="@id/progressBar_balance"
            app:layout_constraintTop_toTopOf="@id/progressBar_balance"
            app:tint="@color/red" />


        <com.pazmandipeter.devoralime.wuptest.view.custom.AccountDetailLine
            android:id="@+id/adl_currentBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            app:descText="@string/current_balance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBar_balance"
            tools:balance="300.00"
            tools:currency="USD" />


        <com.pazmandipeter.devoralime.wuptest.view.custom.AccountDetailLine
            android:id="@+id/adl_minPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:descText="@string/min_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adl_currentBalance"
            tools:balance="300.00"
            tools:currency="USD" />


        <com.pazmandipeter.devoralime.wuptest.view.custom.AccountDetailLine
            android:id="@+id/adl_dueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:descText="@string/due_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adl_minPayment"
            tools:balance="300.00"
            tools:currency="USD" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_verticalForButtonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.28" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_verticalForButtonRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.72" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_whiteback_blueborder_roundedcorners"
            android:padding="8dp"
            android:text="@string/details"
            android:textColor="@color/light_blue_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_verticalForButtonRight"
            app:layout_constraintStart_toStartOf="@id/guideline_verticalForButtonLeft"
            app:layout_constraintTop_toBottomOf="@id/adl_dueDate" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>